Add popup to support button
The icon is great, but it doesn't tell the user what it does.

--- a/readthedocsext/theme/templates/includes/header.html
+++ b/readthedocsext/theme/templates/includes/header.html
@@ -106,7 +106,7 @@ active_item
                         </div>
                       </div>
                       <div>
-                        <a class="ui circular basic icon button" href="{% url 'support' %}" aria-label="{% trans 'Get support' %}">
+                        <a class="ui circular basic icon button" href="{% url 'support' %}" aria-label="{% trans 'Get support' %}" data-content="{% trans "Get support" %}">
                           <i class="fa-solid fa-message-question icon"></i>
                         </a>
                       </div>
