--- a/readthedocsext/theme/templates/profiles/partials/github_oauth_list.html
+++ b/readthedocsext/theme/templates/profiles/partials/github_oauth_list.html
@@ -5,7 +5,7 @@
   OAuth accounts that need connection to our new GHA.
 {% endcomment %}
 
-{% load i18n %}
+{% load trans from i18n %}
 {% load provider_login_url from socialaccount %}
 
 {% block top_menu %}
